--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /Twitter bot/ACCESS_TOKEN.txt
 /Twitter bot/ACCESS_TOKEN_SECRET.txt
 /Website/GOOGLE_API.txt
+/Data extraction/*.accdb
+/Data extraction/*.csv
+/Data extraction/*.xlsx
+/Data extraction/*.tsv
+/Instagram bot/
