--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ Flask~=2.2.5
 requests~=2.31
 tweepy~=4.8.0
 telegram~=0.0.1
-instapy~=0.6.16
 pyodbc~=4.0.32
 plotly~=5.13.1
 pandas~=2.0.1
 fpdf2~=2.7.4
 fonttools~=4.39.0
+selenium~=4.9.0
+instapy~=0.6.16
+Unidecode~=1.3.6
